style: correct width values in ProjectCard; enhance layout in Projects page for better alignment

--- a/app/components/project-card/project-card.module.scss
+++ b/app/components/project-card/project-card.module.scss
@@ -1,11 +1,12 @@
 .project-card {
-	width: 90dvw;
+	width: 90vw;
+	min-width: 90vw;
 	height: max-content;
 	flex-shrink: 0;
 	box-sizing: border-box;
-	transform: translate(200%, 7.5%);
 	position: relative;
 	padding: 0 2.5rem;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	gap: 0.75rem;
@@ -13,6 +14,14 @@
 	justify-content: center;
 	scroll-snap-align: center;
 	overflow: hidden;
+
+	&:first-of-type {
+		padding-right: 0.75rem;
+	}
+
+	&:last-of-type {
+		padding-left: 0.75rem;
+	}
 
 	.content {
 		@media screen and (min-width: $screen-min-medium) {
