--- a/app/styles/pages/projects.module.scss
+++ b/app/styles/pages/projects.module.scss
@@ -4,6 +4,9 @@
 	position: relative;
 	overflow: hidden;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
 	::-webkit-scrollbar {
 		display: inline;
